[package]
name = "polonium"
version = "0.1.0"
authors = ["Aloïs Micard <alois@micard.lu>"]
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/creekorful/polonium"
readme = "README.md"
description = "Yet another hacking framework"

[dependencies]

[dependencies.clap]
version = "2.33.1"
default-features = false
